[workspace]
members = ["fiberplane-pdk", "fiberplane-pdk-macros", "providers/*", "xtask"]
exclude = ["providers/.cargo"]

[workspace.package]
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2021"
rust-version = "1.65"
version = "1.0.0-beta.4"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fiberplane/providers"

[workspace.dependencies]
fiberplane-models = { version = "1.0.0-beta.3" }
fiberplane-pdk = { version = "1.0.0-beta.4", path = "fiberplane-pdk" }
fiberplane-pdk-macros = { version = "1.0.0-beta.4", path = "fiberplane-pdk-macros" }
fiberplane-provider-bindings = { version = "2.0.0-beta.3" }
fp-bindgen = { version = "3.0.0" }
fp-bindgen-support = { version = "3.0.0" }
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.15", features = [
  "macros",
  "serde-human-readable",
  "serde-well-known",
] }
tracing = "0.1.36"
url = { version = "2.2.2", features = ["serde"] }
vergen = { version = "7.4.2", default-features = false, features = [
  "build",
  "git",
] }

[patch.crates-io]
#fiberplane-models = { path = "../fiberplane/fiberplane-models" }
fiberplane-models = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
#fiberplane-provider-bindings = { path = "../fiberplane/fiberplane-provider-protocol/fiberplane-provider-bindings" }
fiberplane-provider-bindings = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
#fp-bindgen = { path = "../fp-bindgen/fp-bindgen" }
#fp-bindgen-support = { path = "../fp-bindgen/fp-bindgen-support" }
#fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }
#fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }

[patch.'ssh://git@github.com/fiberplane/fiberplane.git']
#fiberplane-models = { path = "../fiberplane/fiberplane-models" }
#fiberplane-provider-bindings = { path = "../fiberplane/fiberplane-provider-protocol/fiberplane-provider-bindings" }
