[workspace]
resolver = "2"
members = ["fiberplane-pdk", "fiberplane-pdk-macros", "providers/*", "xtask"]
exclude = ["providers/.cargo"]

[workspace.package]
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2021"
rust-version = "1.65"
version = "1.0.0-beta.8"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fiberplane/providers"

[workspace.dependencies]
fiberplane-ci = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
fiberplane-models = { version = "1.0.0-beta.11" }
fiberplane-pdk = { version = "1.0.0-beta.11", path = "fiberplane-pdk" }
fiberplane-pdk-macros = { version = "1.0.0-beta.11", path = "fiberplane-pdk-macros" }
fiberplane-provider-bindings = { version = "2.0.0-beta.11" }
fp-bindgen = { version = "3.0.0" }
fp-bindgen-support = { version = "3.0.0" }
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.15", features = [
  "macros",
  "serde-human-readable",
  "serde-well-known",
  "parsing",
] }
tracing = "0.1.36"
url = { version = "2.2.2", features = ["serde"] }
vergen = { version = "8.2.5", features = ["build", "git", "git2"] }

[patch.crates-io]
#fiberplane-provider-bindings = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
#fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }
#fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }

#[patch.'ssh://git@github.com/fiberplane/fiberplane.git']
#fiberplane-models = { path = "../fiberplane/fiberplane-models" }
#fiberplane-provider-bindings = { path = "../fiberplane/fiberplane-provider-protocol/fiberplane-provider-bindings" }
