[package]
name = "fiberplane-pdk"
description = "Fiberplane Provider Development Kit"
readme = "README.md"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0-beta.11"
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["lib"]

[dependencies]
fiberplane-models = { workspace = true }
fiberplane-pdk-macros = { workspace = true }
fiberplane-provider-bindings = { workspace = true }
fp-bindgen = { workspace = true }
rmp-serde = "1"
rmpv = { workspace = true }
serde = { workspace = true }
serde_qs = "0.12.0"
serde_json = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
time = { workspace = true }
trybuild = "1.0"
