[package]
name = "fp-provider"
version = "1.0.0-alpha.1"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[dependencies]
fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main", features = ["async", "guest"] }
once_cell = { version = "1" }
rmp-serde = { version = "1.0.0" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11" }
