[package]
name = "elasticsearch-provider"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
elasticsearch-dsl = "0.1"
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "main" }
fp-provider = { version = "2.0.0", path = "../../fp-provider" }
hex = "0.4.3"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1"
time = { version = "0.3.7", features = ["serde", "serde-well-known"] }
url = "2.2.2"
