[package]
name = "elasticsearch-provider"
description = "Fiberplane Elasticsearch Provider"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = { workspace = true }
elasticsearch-dsl = "0.4.9"
fiberplane-pdk = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
