[package]
name = "loki-provider"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-pdk = { workspace = true }
fiberplane-provider-bindings = { workspace = true }
grafana-common = { path = "../grafana-common" }
serde = { workspace = true }
serde_json = { workspace = true }
url = { version = "2.2.2", features = ["serde"] }

[build-dependencies]
vergen = { workspace = true }
