[package]
name = "loki-provider"
description = "Fiberplane Loki Provider"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-pdk = { workspace = true }
grafana-common = { path = "../grafana-common" }
serde = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
