[package]
name = "prometheus-provider"
version = "0.1.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = "1"
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "main" }
fp-provider = { version = "1.0.0-alpha.1", path = "../../fp-provider" }
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
time = { version = "0.3.4", features = ["formatting"] }
url = "2.2.2"
