[package]
name = "prometheus-provider"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2"
form_urlencoded = "1"
fiberplane-models = { workspace = true }
fiberplane-pdk = { workspace = true }
fp-bindgen = { workspace = true }
grafana-common = { path = "../grafana-common" }
rmp-serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
url = { version = "2.2.2", features = ["serde"] }
prometheus-parser = "0.4.2"

[build-dependencies]
vergen = { workspace = true }
