[package]
name = "sample-provider"
description = "Fiberplane Sample Provider"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
build = "build.rs"
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-pdk = { workspace = true }
serde = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
