[package]
name = "sentry-provider"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2"
form_urlencoded = "1"
fiberplane-pdk = { workspace = true }
fiberplane-models = { workspace = true }
futures = "0.3"
percent-encoding = "2.1"
rmp-serde = "1"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
url = "2.2.2"

[build-dependencies]
vergen = { workspace = true }
