[package]
name = "fp-provider-runtime"
version = "1.0.0-alpha.1"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
rmp-serde = "=1.0.0-beta.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0.26"
tokio = "1.9.0"
tracing = "0.1.29"

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
wasmer = { version = "2.0", features = ["cranelift"] }

[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
wasmer = { version = "2.0", features = ["singlepass"] }
